# CppExercises

./: .gitignore
exercise1/: Makefile  bar.h  date.cc  datetest  enumtest  eyes.h  include_test  include_test.cc  inctest  palindrome.cc  palindrome.h  palindrometest  palindrometest.cc  pointtest  sizetest  traffic_light.h
exercise2/: count_objs.cc  editor.cc  ex2.md
exercise3/: bitbuffer.cc  bitbuffer.h  bitbuffertest  countobj  countobj.cc  crypto.cc  crypto.h  cryptotest  svector.cc  svector.h  svectortest
exercise4/: Makefile  const  const.cc  overload.cc  rational.cc  rational.h  rationaltest  rationaltest.cc  shapetest  shapetest.cc  shapevectortest  shapevectortest.cc
exercise5/: Makefile  istream_iterator_test  istream_iterator_test.cc  morsecode.cc  morsecode.h  morsetest  person.cc  person.h  personsorttest  sortwords  text.h  textiterator.cc  textiterator.h  texttest  texttest.cc
exercise6/: Makefile  csorttest  csorttest.cc  filereader.cc  filereader.h  filereader_test.cc  generate  generate.cc  sequencegenerator.h  tagremover_alg  test_narrow_cast
lab1/: Makefile  coding.cc  decode  encode  encode.cc  hello  list.cc  list.h  ltest  ltest.cc  myltest  myltest.cc  print_argv  test.txt.enc  test_coding
lab1/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  decode.cc  encode.cc  ltest.cc
lab1/cmake/liblab1/: CMakeLists.txt  Makefile  cmake_install.cmake
lab2/: Makefile  dictTest.cc  dictionary.cc  dictionary.h  parse_words.cc  word.cc
lab3/: Makefile  date.cc  date.h  date_test  dateoperator_test  dateoperator_test.cc  diff  (+13 more)
(+36 files in other folders)
